# py-forestly

./: .pyre_configuration  pyproject.toml
.github/workflows/: ci.yml
planning/: example_sparkline.py  sparkline_point.py
src/forestly/: __init__.py
src/forestly/core/: __init__.py  config.py  forest_plot.py
src/forestly/exporters/: __init__.py  reactable.py
src/forestly/panels/: __init__.py  base.py  sparkline.py  text.py
tests/: test_forest_plot.py
